# alumni

./: LICENSE.md  README.md  TODO.md  pyproject.toml
alumni/: alumni.py  estimators.py  utils.py
tests/: test_alumni.py  test_estimators.py
