[tool.poetry]
name = "alumni"
version = "0.0.0"
description = ""
authors = ["Tsvika <tsvikas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tables = "^3.5"
numpy = "^1.17"
scikit-learn = "^0.21.3"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pre-commit = "^1.18"
vitables = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
